--- a/templates/base.html
+++ b/templates/base.html
@@ -10,20 +10,22 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+<div>
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-        <span class="fs-4">AllCritic</span>
+      <a  href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap" color="black"></use></svg>
+        <span class="fs-4"><font color="white">AllCritic</font></span>
       </a>
 
       <ul class="nav nav-pills">
+
         <li class="nav-item"><a href="http://127.0.0.1:5000" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="http://127.0.0.1:5000/about" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+        <li class="nav-item"><a href="http://127.0.0.1:5000/about" class="nav-link"><font color="white">About</font></a></li>
+        <li class="nav-item"><a href="#" class="nav-link"><font color="white">Pricing</font></a></li>
+        <li class="nav-item"><a href="#" class="nav-link"><font color="white">FAQs</font></a></li>
         <li class="nav-item"><a href="http://127.0.0.1:5000/create-article" class="btn btn-warning">Create Article</a></li>
       </ul>
-    </header>
+    </header></div>
     {% block body %}{% endblock %}
 
     <footer class=" conteiner pt-4 my-md-5 pt-md-5 border-top">
