--- a/templates/base.html
+++ b/templates/base.html
@@ -19,11 +19,11 @@
 
       <ul class="nav nav-pills">
 
-        <li class="nav-item"><a href="http://127.0.0.1:5000" class="nav-link active" aria-current="page">Home</a></li>
-        <li class="nav-item"><a href="http://127.0.0.1:5000/about" class="nav-link"><font color="white">About</font></a></li>
-        <li class="nav-item"><a href="#" class="nav-link"><font color="white">Pricing</font></a></li>
+        <li class="nav-item"><a href="http://127.0.0.1:5000" class="nav-link active" aria-current="page">Главная</a></li>
+        <li class="nav-item"><a href="http://127.0.0.1:5000/about" class="nav-link"><font color="white">О нас</font></a></li>
+        <li class="nav-item"><a href="http://127.0.0.1:5000/sign_up" class="btn btn-danger"><font color="white">Регистрация</font></a></li>
         <li class="nav-item"><a href="#" class="nav-link"><font color="white">FAQs</font></a></li>
-        <li class="nav-item"><a href="http://127.0.0.1:5000/create-article" class="btn btn-warning">Create Article</a></li>
+        <li class="nav-item"><a href="http://127.0.0.1:5000/create-article" class="btn btn-warning">Создать статью</a></li>
       </ul>
     </header></div>
     {% block body %}{% endblock %}
