--- a/templates/register.html
+++ b/templates/register.html
@@ -6,10 +6,11 @@
 
 {% block body %}
 <div class="container mt-5">
-    <h1>Добавление статьи</h1>
+    <h1>Регистрация</h1>
     <form method="post">
         <input type="text" name="nickname" id="nickname" class="form-control" placeholder="Введите никнейм"><br>
         <textarea name="password" id="password" class="form-control" placeholder="Введите пароль"></textarea><br>
+        <textarea name="key" id="key" class="form-control" placeholder="Введите особый код(только для администраторов)"></textarea><br>
         <input type="submit" class="btn btn-success" value="Отправить"><br>
     </form>
 </div>
