--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <title>{% block title %}{% endblock %}</title>
 </head>
@@ -20,9 +21,9 @@
       <ul class="nav nav-pills">
 
         <li class="nav-item"><a href="http://127.0.0.1:5000" class="nav-link active" aria-current="page">Главная</a></li>
-        <li class="nav-item"><a href="http://127.0.0.1:5000/about" class="nav-link"><font color="white">О нас</font></a></li>
+        <li class="nav-item"><a href="http://127.0.0.1:5000/login" class="nav-link"><font color="white">Войти</font></a></li>
         <li class="nav-item"><a href="http://127.0.0.1:5000/sign_up" class="btn btn-danger"><font color="white">Регистрация</font></a></li>
-        <li class="nav-item"><a href="#" class="nav-link"><font color="white">FAQs</font></a></li>
+        <li class="nav-item"><a href="http://127.0.0.1:5000/FAQ" class="nav-link"><font color="white">FAQs</font></a></li>
         <li class="nav-item"><a href="http://127.0.0.1:5000/create-article" class="btn btn-warning">Создать статью</a></li>
       </ul>
     </header></div>
@@ -31,22 +32,21 @@
     <footer class=" conteiner pt-4 my-md-5 pt-md-5 border-top">
     <div class="row">
       <div class="col-12 col-md">
-        <img class="mb-2" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="24" height="19">
-        <small class="d-block mb-3 text-body-secondary">© 2017–2024</small>
+          <span class="fs-4" style="font-family:verdana;"><font color="white">AllCritic</font></span>
       </div>
       <div class="col-6 col-md">
-        <h5>Features</h5>
+        <h5><font color="white">Features</font></h5>
         <ul class="list-unstyled text-small">
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Cool stuff</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Random feature</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team feature</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Stuff for developers</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="http://127.0.0.1:5000/for_admins">Для админов</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another one</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Last time</a></li>
         </ul>
       </div>
       <div class="col-6 col-md">
-        <h5>Resources</h5>
+        <h5><font color="white">Features</font></h5>
         <ul class="list-unstyled text-small">
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource name</a></li>
@@ -55,7 +55,7 @@
         </ul>
       </div>
       <div class="col-6 col-md">
-        <h5>About</h5>
+        <h5><font color="white">Features</font></h5>
         <ul class="list-unstyled text-small">
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team</a></li>
           <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Locations</a></li>
