--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %}
-<h1>О нас</h1>
+О нас
 {% endblock %}
 
 {% block body %}
-<h1>Lobotomy Corporation</h1>
-{% endblock %}
+<h1>Login</h1>
+    {% endblock %}
