--- a/templates/faq.html
+++ b/templates/faq.html
@@ -14,6 +14,24 @@ FAQ{% endblock %}
 <br>
 
 <div class="container" align="center">
+<h1 align="center">Идея проекта</h1>
+<br>
+<p class="lead text">Идея нашего проекта заключается в создании более упрощенной версии сайта "MetaCritic"(сайта для оценки игр, фильмов, сериалов).
+    <p>
+</div>
+
+
+<div class="container" align="center" text-a>
+<h1 align="center">Как осуществляется оценка игр, фильмов, сериалов?</h1>
+<br>
+<p class="lead text">Чтобы оценить определенную игру/фильм/сериал необходимо:<br>
+    1)Стать администратором (см. ниже).<br>
+    2)Перейти на страницу добавление статьи(кнопка - "добавить статью")<br>
+    3)Заполнить необходимые поля<p>
+</div>
+
+
+<div class="container" align="center">
 <h1 align="center">Как устроена система администарции?</h1>
 <br>
 <p class="lead text">Система администрации сделана для того чтобы регулировать полномочия каждого пользователя.
