--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,31 @@
-{% extends 'base.html' %}
-
-{% block title %}
-О нас
-{% endblock %}
+{% extends "base.html" %}
 
 {% block body %}
-<h1>Login</h1>
-    {% endblock %}
+    <h1>Авторизация</h1>
+    <form action="" method="post">
+        <div class="container">
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.email.label }}<br>
+            {{ form.email(class="form-control", type="email") }}<br>
+            {% for error in form.email.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.password.label }}<br>
+            {{ form.password(class="form-control", type="password") }}<br>
+            {% for error in form.password.errors %}
+                <div class="alert alert-danger" role="alert">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        </p>
+        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
+        <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
+        <div>{{ message }}</div>
+            </div>
+    </form>
+{% endblock %}
