--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <h1>Авторизация</h1>
+    <h1 align="center">Авторизация</h1>
     <form action="" method="post">
         <div class="container">
         {{ form.hidden_tag() }}
