--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <title>{% block title %}{% endblock %}</title>
 </head>
@@ -23,8 +24,14 @@
       <ul class="nav nav-pills">
 
         <li class="nav-item"><a href="http://127.0.0.1:5000" class="nav-link active" aria-current="page">Главная</a></li>
-        <li class="nav-item"><a href="http://127.0.0.1:5000/login" class="nav-link"><font color="white">Войти</font></a></li>
-        <li class="nav-item"><a href="http://127.0.0.1:5000/sign_up" class="btn btn-danger"><font color="white">Регистрация</font></a></li>
+        {% if current_user.is_authenticated %}   <a class="navbar-brand" href="/logout"><font color="white"><img width="40" height="40" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJx9X1j4gDIYI6mbjf2iO_x3DVLNg2CCvFgmlqIorCsA&s"></font></a>
+           <a class="navbar-brand" href="/profile"><h2><font color="white">Профиль</font></h2></a>
+{% else %}
+    <p>
+        <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
+        <a class="btn btn-success" href="/login">Войти</a>
+    </p>
+{% endif %}
         <li class="nav-item"><a href="http://127.0.0.1:5000/FAQ" class="nav-link"><font color="white">FAQs</font></a></li>
         <li class="nav-item"><a href="http://127.0.0.1:5000/create-article" class="btn btn-warning">Создать статью</a></li>
       </ul>
