--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
 
 {% block body %}
+{% if current_user.is_authenticated %}
+ <div class="alert alert-danger" role="alert">
+            Вы уже авторизированы
+        </div>
+
+{% else %}
+
+
     <h1 align="center">Авторизация</h1>
     <form action="" method="post">
         <div class="container">
@@ -28,4 +36,7 @@
         <div>{{ message }}</div>
             </div>
     </form>
+
+
+{% endif %}
 {% endblock %}
