--- a/templates/register.html
+++ b/templates/register.html
@@ -4,6 +4,14 @@ Welcome
 {% endblock %}
 
 {% block body %}
+
+
+{% if current_user.is_authenticated %}
+ <div class="alert alert-danger" role="alert">
+            Вы уже авторизированы
+        </div>
+
+{% else %}
 <div class="container mt-5">
 <!--    <h1>Регистрация</h1>-->
 <!--    <form method="post">-->
@@ -64,4 +72,7 @@ Welcome
     {{message}}
 </form>
 </div>
+
+{% endif %}
 {% endblock %}
+
