--- a/templates/base.html
+++ b/templates/base.html
@@ -46,33 +46,14 @@
       <div class="col-12 col-md">
           <span class="fs-4" style="font-family:verdana;"><font color="white">AllCritic</font></span>
       </div>
+
       <div class="col-6 col-md">
-        <h5><font color="white">Features</font></h5>
+        <h5><font color="white">Авторы</font></h5>
         <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Cool stuff</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Random feature</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team feature</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="http://127.0.0.1:5000/for_admins">Для админов</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another one</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Last time</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md">
-        <h5><font color="white">Features</font></h5>
-        <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource name</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another resource</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Final resource</a></li>
-        </ul>
-      </div>
-      <div class="col-6 col-md">
-        <h5><font color="white">Features</font></h5>
-        <ul class="list-unstyled text-small">
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Locations</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Privacy</a></li>
-          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Terms</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">tg: VoinManager</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">tg: InviteIwniTo89</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Создано для Яндекс Лицея</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">)))</a></li>
         </ul>
       </div>
     </div>
