--- a/templates/faq.html
+++ b/templates/faq.html
@@ -22,13 +22,17 @@ FAQ{% endblock %}
 
 
 <div class="container" align="center" text-a>
-<h1 align="center">Как осуществляется оценка игр, фильмов, сериалов?</h1>
+<h1 align="center">Как осуществляется оценка продуктов?</h1>
 <br>
-<p class="lead text">Чтобы оценить определенную игру/фильм/сериал необходимо:<br>
-    1)Стать администратором (см. ниже).<br>
-    2)Перейти на страницу добавление статьи(кнопка - "добавить статью")<br>
-    3)Заполнить необходимые поля<p>
+<p class="lead text">Зайдите на карточку нужного вам продукта, чуть ниже основной информации будет <br>
+    кнопка, при нажатии по которой вы сможете оценить продукт. <br>
+    Если карточки нужного вам продукта, то вы можете попросить администраторов создать карточку, <br>
+    либо создать её самим (если вы сами являетесь администратором)<br>
+    <strong> Просим вас ставить лишь по одной оценке каждому продукту.</strong><p>
+
 </div>
+
+
 
 
 <div class="container" align="center">
